<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Seven Wonders Calculator</string>
    <string name="title">Number of Players:</string>
    <string name="playerName">Name</string>
    <string name="playerNumber">3</string>
    <string name="warPoints">War Points</string>
    <string name="moneyPoints">Money Points</string>
    <string name="wonderPoints">Wonder Points</string>
    <string name="bluePoints">Blue Points</string>
    <string name="yellowPoints">Yellow Points</string>
    <string name="purplePoints">Purple Points</string>
    <string name="greenPoints">Green Points</string>
    <string name="leaderPoints">Leader Points</string>
    <string name="sum">All Points</string>
    <string name="example">42</string>
    <string name="calc">Calculate</string>
</resources>
